web : 페이지추가

--- a/pages/about.html
+++ b/pages/about.html
@@ -134,14 +134,35 @@
                 <p><img src="../image/about_cont01_face.png" alt="증명사진"></p>
                 <p>윤유림<br>yurim.yun</p>
                 <ul>
-                    <li>1997.05 .05</li>
-                    <li>Gongneung-ro, Nowon-gu, Seoul</li>
-                    <li>zeze-@naver.com</li>
-                    <li>010-5452-9497</li>
+                    <li class="cont01_left_title">contact</li>
+                    <li>/ 1997.05 .05</li>
+                    <li>/ Gongneung-ro, Nowon-gu, Seoul</li>
+                    <li>/ zeze-@naver.com</li>
+                    <li>/ 010-5452-9497</li>
+                </ul>
+                <ul>
+                    <li class="cont01_left_title">history</li>
+                    <li>/</li>
+                    <li>/</li>
+                    <li>/</li>
+                    <li>/</li>
                 </ul>
             </div>
             <div class="cont01_right">
-
+                <ul>
+                    <li>software skill</li>
+                    <li>/ 1997.05 .05</li>
+                    <li>/ Gongneung-ro, Nowon-gu, Seoul</li>
+                    <li>/ zeze-@naver.com</li>
+                    <li>/ 010-5452-9497</li>
+                </ul>
+                <ul>
+                    <li>work skill</li>
+                    <li>/ 1997.05 .05</li>
+                    <li>/ Gongneung-ro, Nowon-gu, Seoul</li>
+                    <li>/ zeze-@naver.com</li>
+                    <li>/ 010-5452-9497</li>
+                </ul>
             </div>
         </article>
     </section>
