--- a/pages/about.html
+++ b/pages/about.html
@@ -149,19 +149,79 @@
                 </ul>
             </div>
             <div class="cont01_right">
-                <ul>
+                <ul class="software_skill">
                     <li>software skill</li>
-                    <li>/ 1997.05 .05</li>
-                    <li>/ Gongneung-ro, Nowon-gu, Seoul</li>
-                    <li>/ zeze-@naver.com</li>
-                    <li>/ 010-5452-9497</li>
+                    <li>
+                        <div class="progressbar-title">
+                            <p>Photoshop, Illustration</p>
+                            <span class="percent" id="html-pourcent">100%</span>
+                        </div>
+                        <div class="bar-container">
+                            <span class="progressbar progress01"></span>
+                        </div>
+                    </li>
+
+                    <li>
+                        <div class="progressbar-title">
+                            <p>VS Code, Dreamweaver, Brackets</p>
+                            <span class="percent" id="html-pourcent">80%</span>
+                        </div>
+                        <div class="bar-container">
+                            <span class="progressbar progress02"></span>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="progressbar-title">
+                            <p>Adobe XD</p>
+                            <span class="percent" id="html-pourcent">50%</span>
+                        </div>
+                        <div class="bar-container">
+                            <span class="progressbar progress03" id="progress-html"></span>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="progressbar-title">
+                            <p>Lightroom</p>
+                            <span class="percent" id="html-pourcent">70%</span>
+                        </div>
+                        <div class="bar-container">
+                            <span class="progressbar progress04" id="progress-html"></span>
+                        </div>
+                    </li>
                 </ul>
                 <ul>
                     <li>work skill</li>
-                    <li>/ 1997.05 .05</li>
-                    <li>/ Gongneung-ro, Nowon-gu, Seoul</li>
-                    <li>/ zeze-@naver.com</li>
-                    <li>/ 010-5452-9497</li>
+                    <li>
+                        <div class="progressbar-title">
+                            <p>HTML, CSS</p>
+                            <span class="percent" id="html-pourcent">90%</span>
+                        </div>
+                        <div class="bar-container">
+                            <span class="progressbar progress05"></span>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="progressbar-title">
+                            <p>Javascript</p>
+                            <span class="percent" id="html-pourcent">70%</span>
+                        </div>
+                        <div class="bar-container">
+                            <span class="progressbar progress06"></span>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="progressbar-title">
+                            <p>JQuery</p>
+                            <span class="percent" id="html-pourcent">80%</span>
+                        </div>
+                        <div class="bar-container">
+                            <span class="progressbar progress07"></span>
+                        </div>
+                    </li>
+                </ul>
+                <ul class="history">
+
+                    <li>history</li>
                 </ul>
             </div>
         </article>
@@ -220,6 +280,29 @@
                 }, 600);
             }
         }); ///click///
+    </script>
+    <script>
+        $('.progress01').animate({
+            'width': '100%'
+        }, 1000);
+        $('.progress02').animate({
+            'width': '80%'
+        }, 1000);
+        $('.progress03').animate({
+            'width': '50%'
+        }, 1000);
+        $('.progress04').animate({
+            'width': '70%'
+        }, 1000);
+        $('.progress05').animate({
+            'width': '90%'
+        }, 1000);
+        $('.progress06').animate({
+            'width': '70%'
+        }, 1000);
+        $('.progress07').animate({
+            'width': '80%'
+        }, 1000);
     </script>
 </body>
 
