--- a/pages/about.html
+++ b/pages/about.html
@@ -220,8 +220,10 @@
                     </li>
                 </ul>
                 <ul class="history">
-
                     <li>history</li>
+                    <li>2013.02~2016.02 / 청원여자고등학교 졸업</li>
+                    <li>2018.03~2019.04 / FMJ 인터네셔널 더블유브이프로젝트 웹디자이너</li>
+                    <li>2020.04.21~2020.10.21 / 그린컴퓨터 아카데미 과정 수료</li>
                 </ul>
             </div>
         </article>
