--- a/pages/component.html
+++ b/pages/component.html
@@ -8,7 +8,7 @@
     <script src="../script/jquery-1.7.2.min.js"></script>
     <link rel="stylesheet" type="text/css" href="../css/baes.css" />
     <link rel="stylesheet" type="text/css" href="../css/core.css" />
-    <link rel="stylesheet" type="text/css" href="../css/web.css" />
+    <link rel="stylesheet" type="text/css" href="../css/component.css" />
     <style>
         .p_lt>ol>li:nth-child(2) a {
             font-weight: bold;
@@ -51,7 +51,7 @@
                                 clip-rule="evenodd"></path>
                         </svg>web</a>
                     <ul class="sub">
-                        <li><a href="./web.html" title="web">web</a></li>
+                        <li><a href="#none" title="web">web</a></li>
                         <li><a href="#none" title="component">component</a></li>
                         <li><a href="#none" title="study">study</a></li>
                     </ul>
@@ -151,29 +151,6 @@
                         <span></span>
                     </a>
                     <p class="title"><span>쵸피</span>#리뉴얼 #유지&middot;보수 #상품추가 #카페24</p>
-                </li>
-                <li>
-                    <p class="title"><span>더블유브이</span>#리뉴얼 #유지&middot;보수 #상품추가 #카페24</p>
-                    <a href="http://www.wvproject.co.kr/" title="자세히보기" target="_blank">
-                        <img src="../image/web_wvproject_pc.png" alt="더블유브이사이트">
-                        <span>타임 트래벌러 와이드<br>반팔티셔츠</span>
-                    </a>
-                </li>
-                <li>
-                    <p class="title"><span>페플</span>#리뉴얼 #유지&middot;보수 #상품추가 #카페24</p>
-                    <a href="http://www.fairplay142.com/shop/shopdetail.html?branduid=139560" title="자세히보기"
-                        target="_blank">
-                        <img src="../image/web_fairplay_pc.png" alt="페플사이트">
-                        <span>타임 트래벌러 와이드<br>반팔티셔츠</span>
-                    </a>
-                </li>
-                <li>
-                    <p class="title"><span>제멋</span>#리뉴얼 #유지&middot;보수 #상품추가 #카페24</p>
-                    <a href="http://www.fairplay142.com/shop/shopdetail.html?branduid=139560" title="자세히보기"
-                        target="_blank">
-                        <img src="../image/web_jemutshop_pc.png" alt="제멋사이트">
-                        <span>타임 트래벌러 와이드<br>반팔티셔츠</span>
-                    </a>
                 </li>
                 <!-- 기준 -->
             </ul>
