--- a/index.html
+++ b/index.html
@@ -35,14 +35,15 @@
             </svg>about</a>
         </li>
         <li>
-          <a href="#none" title="web"><svg viewBox="0 0 20 20" fill="currentColor" class="desktop-computer w-6 h-6">
+          <a href="./pages/web.html" title="web"><svg viewBox="0 0 20 20" fill="currentColor"
+              class="desktop-computer w-6 h-6">
               <path fill-rule="evenodd"
                 d="M3 5a2 2 0 012-2h10a2 2 0 012 2v8a2 2 0 01-2 2h-2.22l.123.489.804.804A1 1 0 0113 18H7a1 1 0 01-.707-1.707l.804-.804L7.22 15H5a2 2 0 01-2-2V5zm5.771 7H5V5h10v7H8.771z"
                 clip-rule="evenodd"></path>
             </svg>web</a>
           <ul class="sub">
-            <li><a href="#none" title="web">web</a></li>
-            <li><a href="#none" title="component">component</a></li>
+            <li><a href="./pages/web.html" title="web">web</a></li>
+            <li><a href="./pages/component.html" title="component">component</a></li>
             <li><a href="#none" title="study">study</a></li>
           </ul>
         </li>
