about : work skill 추가

--- a/pages/about.html
+++ b/pages/about.html
@@ -218,6 +218,24 @@
                             <span class="progressbar progress07"></span>
                         </div>
                     </li>
+                    <li>
+                        <div class="progressbar-title">
+                            <p>React</p>
+                            <span class="percent" id="html-pourcent">30%</span>
+                        </div>
+                        <div class="bar-container">
+                            <span class="progressbar progress08"></span>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="progressbar-title">
+                            <p>Storybook</p>
+                            <span class="percent" id="html-pourcent">30%</span>
+                        </div>
+                        <div class="bar-container">
+                            <span class="progressbar progress09"></span>
+                        </div>
+                    </li>
                 </ul>
                 <ul class="history">
                     <li>history</li>
@@ -304,6 +322,12 @@
         }, 1000);
         $('.progress07').animate({
             'width': '80%'
+        }, 1000);
+        $('.progress08').animate({
+            'width': '50%'
+        }, 1000);
+        $('.progress09').animate({
+            'width': '30%'
         }, 1000);
     </script>
 </body>
